testing/errors/valuenotdefined3.a
	* = $200
	!by .local	; -> "Value not defined."
